--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "author": "Jeff Kunkle <jeff.kunkle@nearinfinity.com>",
-  "name": "nodejs-explained-pres",
-  "description": "Node.js Explained Presentation",
+  "author": "Near Infinity",
+  "name": "node-keynote-controller",
+  "description": "Node.js Keynote Controller",
   "version": "0.0.1",
   "repository": {
     "url": ""
   },
   "main": "server.js",
-  "engines": {
-    "node": "~0.6.1"
-  },
   "dependencies": {
     "express": "~2.5.8",
 	"socket.io": "~0.9.1"
