--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "main": "server.js",
   "dependencies": {
-    "express": "~2.5.8",
-	"socket.io": "~0.9.1"
+    "express": "3.x",
+	"socket.io": "0.9.10"
   },
   "devDependencies": {}
 }
