--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "3.x",
-	"socket.io": "0.9.10"
+    "socket.io": "0.9.10",
+    "ejs": "0.8.x"
   },
   "devDependencies": {}
 }
